--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
     "require": {
         "php": ">=8.1",
         "hyperf/cache": "~3.1.0",
-        "hyperf/command": "~3.1.0",
+        "hyperf/command": "*",
         "hyperf/config": "~3.1.0",
+        "hyperf/database": "~3.1.0",
         "hyperf/db-connection": "~3.1.0",
         "hyperf/engine": "^2.10",
         "hyperf/framework": "~3.1.0",
@@ -24,12 +25,13 @@
         "hyperf/logger": "~3.1.0",
         "hyperf/memory": "~3.1.0",
         "hyperf/process": "~3.1.0",
-        "hyperf/database": "~3.1.0"
+        "hypervel/laminas-mime": "~0.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "hyperf/devtool": "~3.1.0",
         "hyperf/testing": "~3.1.0",
+
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^1.0",
         "swoole/ide-helper": "^5.0"
