--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=8.1",
         "hyperf/cache": "~3.1.0",
-        "hyperf/command": "*",
+        "hyperf/command": "^3.1",
         "hyperf/config": "~3.1.0",
         "hyperf/database": "~3.1.0",
         "hyperf/db-connection": "~3.1.0",
